--- a/style.css
+++ b/style.css
@@ -10,3 +10,42 @@
     border: 3px solid crimson;
     cursor: pointer;
 }
+
+.modalAdd {
+    position: fixed;
+    left: 0;
+    top: 0;
+    visibility: hidden;
+    background-color: lightslategray;
+    transform: scale(1.1);
+    transition: visibility 0s linear 0.25s, transform 0.25s;
+    width: 100%;
+    height: 100%;
+}
+
+.modalContent {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 1rem 1.5rem;
+    width: 24rem;
+    border-radius: 0.5rem;
+}
+
+.openModal {
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, transform 0.25s;
+}
+
+.close {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    background-color: lightgray;
+}
